# viz

unix/: CMakeLists.txt
unix/lab1/awk/: script.sh
unix/lab1/awk/test/: Unix_Awk_11.10.2006  Unix_Grep_10.10.2006
unix/lab1/grep/: script.sh
unix/lab1/grep/test/: sqrt  test_
unix/lab1/sed/: result.txt  script.sh
unix/lab2/: cmd.sh  quad.sh
unix/lab3/: CMakeLists.txt  main.cpp
unix/lab3_1/: CMakeLists.txt  lab3_1  main.cpp  more_rows_than_workers.txt  num.txt  small_test.txt
